# job_monitor

./: .continue-here  .databricksignore  .gitignore  CHANGELOG.md  DEVELOPER.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  TEST_REPORT.md  app.e2.yaml  app.prod.yaml  app.yaml  databricks.dev.yml  databricks.e2.yml  databricks.prod.yml  databricks.yml  deploy.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: DATA_DICTIONARY.md  PERFORMANCE_RECOMMENDATIONS.md  PIPELINE.md  TESTING_GUIDE.md  TEST_COVERAGE_AND_PERFORMANCE.md  USER_GUIDE.md  mobile-first-ux-evaluation.md  performance-test-report-2026-02-28.md
job_monitor/: __init__.py  config.yaml
scripts/: deploy.sh  grant_system_table_access.sql  install-hooks.sh  validate.sh
tests/: ALERTS_TEST_PLAN.md  E2_OPTIMIZATION_TEST.md  TEST_COVERAGE_ANALYSIS.md  WILDCARD_FILTER_TEST_PLAN.md  __init__.py  alerts-page-test.js  alerts-test-results.json  api-benchmark.sh  comprehensive-ui-test.js  comprehensive-ui-test.md  load-test-interim-1772127476536.txt  load-test-interim-1772127829038.txt  load-test-interim-1772128175362.txt  load-test-interim-1772129163612.txt  load-test-interim-1772129489356.txt  load-test-interim-1772129816133.txt  load-test-interim-1772130145109.txt  load-test-interim-1772130452016.txt  load-test-interim-1772130827419.txt  load-test-interim-1772131169607.txt  load-test-interim-1772132049814.txt  load-test.js  manual-test-checklist.md  package-lock.json  package.json  quick-perf-test.sh
(+171 files in other folders)
